--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Stephen Sugden <stephen@betsmartmedia.com> (www.betsmartmedia.com)",
-  "name": "lazy",
-  "description": "ReST service framework",
+  "name": "lazorse",
+  "description": "The lazy programmers ReST service framework",
   "version": "0.0.0",
   "repository": {
     "type": "git",
