--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "engines": {
     "node": "~0.4.12"
   },
+	"bin": {
+		"lzrs-gen-examples": "./lzrs-gen-examples"
+	},
   "dependencies": {
     "connect": "*",
     "uri-template": "*"
