--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "git://github.com/BetSmartMedia/Lazorse.git"
   },
   "main": "./lib/lazorse",
+	"files": [
+		"./lib", "./bin", "./src", "./examples", "./README.md"
+		],
   "engines": {
     "node": "~0.4.12"
   },
