Fix packaging issue

--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "type": "git",
     "url": "git://github.com/BetSmartMedia/Lazorse.git"
   },
-  "main": "./lib/lazorse",
+  "main": "lib/lazorse",
   "files": [
-    "./lib",
-    "./bin",
-    "./examples",
-    "./README.md"
+    "lib",
+    "bin",
+    "examples",
+    "README.md"
   ],
   "engines": {
     "node": ">=0.4.0"
   },
   "bin": {
-    "lzrs-gen-examples": "./bin/lzrs-gen-examples"
+    "lzrs-gen-examples": "bin/lzrs-gen-examples"
   },
   "dependencies": {
     "connect": "*",
