--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lib",
     "examples",
     "test",
-    "lazorse.coffee",
+		"Makefile",
+    "lazorse.js",
     "README.rst"
   ],
   "engines": {
